Added GetMyDetails route, find user by id, changed JWT token data to include ID, & added extract base path helper function
